chnaged env for local

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-REACT_APP_BACKEND_URL = https://spread-the-word.herokuapp.com/
+# production
+ REACT_APP_BACKEND_URL = https://spread-the-word.herokuapp.com/
+
+# development
+# REACT_APP_BACKEND_URL = /
