--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "axios": "^0.26.1",
     "flickity": "^2.2.1",
     "font-awesome": "^4.7.0",
+    "gapi-script": "^1.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flickity-component": "^3.6.2",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.8.0",
     "react-pro-sidebar": "^0.7.1",
