--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,14 @@
 /node_modules
 /.pnp
 .pnp.js
+.env
 
 #testing
 /coverage
 
 # production
 /build
+.env
 
 # misc
 .DS_Store
@@ -16,6 +18,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+/.env
+/chrome
 
 npm-debug.log*
 yarn-debug.log*
