--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # production
- REACT_APP_BACKEND_URL = https://spread-the-word.herokuapp.com/
+ REACT_APP_BACKEND_URL = http://localhost:5000/
 
 # development
 # REACT_APP_BACKEND_URL = /
