--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flickity-component": "^3.6.2",
-    "react-ga": "^3.3.1",
+    "react-ga4": "^2.1.0",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.8.0",
