--- a/package.json
+++ b/package.json
@@ -27,13 +27,9 @@
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-     "webpack": "^5.4.0",
-     "webpack-cli": "^4.2.0"
-   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "webpack",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
