--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -51,5 +53,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://spread-the-word.herokuapp.com/"
+  "proxy": "https://spread-the-word.herokuapp.com/",
+  "homepage": "https://spread-the-word-developer.github.io/stwWebFrontend/",
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  }
 }
