--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
   "proxy": "https://spread-the-word.herokuapp.com/",
   "homepage": "https://librarycatspublishinghouse.github.io/application",
   "devDependencies": {
+    "@types/flickity": "^2.2.11",
+    "@types/styled-components": "^5.1.34",
     "gh-pages": "^6.3.0"
   }
 }
